--- a/templates/profile/modal/delete.html.twig
+++ b/templates/profile/modal/delete.html.twig
@@ -10,13 +10,13 @@
             <form action="{{path('app_profile_personal_data_delete')}}" method="post">
                 <div class="modal-body">
                     <div class="mb-3">
-                        <p class="text-dark-50">
+                        <p class="text-secondary">
                             Note all your data will be deleted permanently. This action cannot be undone!
                         </p>
                     </div>
                     <div class="form-check mb-3">
                         <input class="form-check-input" type="checkbox" name="confirm" id="confirm" required>
-                        <label class="form-check-label text-dark-50" for="confirm">
+                        <label class="form-check-label text-secondary" for="confirm">
                             I confirm the deletion of all my data.
                         </label>
                     </div>
