--- a/templates/profile/modal/update_email.html.twig
+++ b/templates/profile/modal/update_email.html.twig
@@ -10,10 +10,10 @@
             <form action="{{path('app_profile_personal_data_email_store')}}" method="post">
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="iEmail" class="form-label text-dark-50">New Email:</label>
+                        <label for="iEmail" class="form-label text-secondary">New Email:</label>
                         <input type="text" class="form-control" id="iEmail" placeholder="{{app.user.email}}"
                             name="iEmail" style="height: 42px; border-radius: 0;" required>
-                        <small class="text-secondary text-dark-50">This feld is required.</small>
+                        <small class="text-secondary text-secondary">This feld is required.</small>
                     </div>
                 </div>
                 <div class="modal-footer">
