--- a/templates/static/contact-us.html.twig
+++ b/templates/static/contact-us.html.twig
@@ -17,7 +17,7 @@
                     Contact Us
                 </h1>
 
-                <p class="text-dark-50">
+                <p class="text-secondary">
                     Feel free to contact us. We will make a Response within 3 days.
                 </p>
             </div>
@@ -30,8 +30,8 @@
                     <div class="col mt-4">
                         <div class="card text-center d-border">
                             <div class="card-body py-5">
-                                <h5 class="card-title text-dark-50 pb-2">Phone</h5>
-                                <p class="card-text text-dark-50">
+                                <h5 class="card-title text-secondary pb-2">Phone</h5>
+                                <p class="card-text text-secondary">
                                     <span class="bi bi-phone me-2 d-color"></span> 0163 / 616 - 5396
                                 </p>
                             </div>
@@ -40,8 +40,8 @@
                     <div class="col">
                         <div class="card text-center d-border">
                             <div class="card-body py-5">
-                                <h5 class="card-title text-dark-50 pb-2">Email</h5>
-                                <p class="card-text text-dark-50">
+                                <h5 class="card-title text-secondary pb-2">Email</h5>
+                                <p class="card-text text-secondary">
                                     <span class="bi bi-envelope me-2 d-color"></span> ronijan[@]posteo.de
                                 </p>
                             </div>
@@ -50,8 +50,8 @@
                     <div class="col">
                         <div class="card text-center d-border">
                             <div class="card-body py-5">
-                                <h5 class="card-title text-dark-50 pb-2">Address</h5>
-                                <p class="card-text text-dark-50">
+                                <h5 class="card-title text-secondary pb-2">Address</h5>
+                                <p class="card-text text-secondary">
                                     <span class="bi bi-pin-map-fill me-2 d-color"></span>Paul-Gerhardt-Str. 7, 74321
                                     Bietigheim
                                 </p>
@@ -64,28 +64,28 @@
             <div class="col-lg-6">
                 <form action="{{path('app_contact_us_new')}}" method="post" class="px-2">
                     <div class="mb-3">
-                        <label for="iName" class="form-label text-dark-50">Name</label>
+                        <label for="iName" class="form-label text-secondary">Name</label>
                         <input type="text" class="form-control" id="iName" placeholder="Name *"
                             style="height: 46px; border-radius: 0;"
                             required name="iName" style="height: 46px; border-radius: 0;">
                     </div>
 
                     <div class="mb-3">
-                        <label for="iEmail" class="form-label text-dark-50">Email</label>
+                        <label for="iEmail" class="form-label text-secondary">Email</label>
                         <input type="email" class="form-control" id="iEmail" placeholder="Email *"
                             style="height: 46px; border-radius: 0;"
                             required name="iEmail" style="height: 46px; border-radius: 0;">
                     </div>
 
                     <div class="mb-3">
-                        <label for="iSubject" class="form-label text-dark-50">Subject</label>
+                        <label for="iSubject" class="form-label text-secondary">Subject</label>
                         <input type="text" class="form-control" id="iSubject" placeholder="Subject *"
                             style="height: 46px; border-radius: 0;"
                             required name="iSubject" style="height: 46px; border-radius: 0;">
                     </div>
 
                     <div class="mb-4">
-                        <label for="iMessage" class="form-label text-dark-50">Message</label>
+                        <label for="iMessage" class="form-label text-secondary">Message</label>
                         <textarea class="form-control" id="iMessage" rows="5" name="iMessage"
                             style="border-radius: 0;"
                             placeholder="Message *"></textarea>
@@ -99,7 +99,7 @@
                     <div class="my-3">
                         <small class="text-secondary" style="font-size: 13px;">
                             <span class="bi bi-info-circle pe-1"></span> By submitting this form, you agree to our
-                            <a href="{{path('app_legal_privacy_policy')}}" class="text-dark-50 text-decoration-none"
+                            <a href="{{path('app_legal_privacy_policy')}}" class="text-secondary text-decoration-none"
                                 rel="nofollow">Privacy
                                 Policy</a>.
                         </small>
