--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -53,7 +53,7 @@ input[type="color"]:focus,
 .btn:focus .uneditable-input:focus {
     border-color: none;
     outline: 0 none;
-    border: 1px solid #a9d158 !important;
+    border: 1px solid #6f65fc !important;
     box-shadow: none !important;
 }
 
@@ -66,7 +66,8 @@ input[type="color"]:focus,
 }
 
 .d-border {
-    border: 1px solid #5b5b5b47;
+    border: 1px solid #b9b9b947;
+    border-radius: 5px;
 }
 
 .pointer {
