--- a/templates/account/auth.html.twig
+++ b/templates/account/auth.html.twig
@@ -11,13 +11,12 @@
                 <div class="d-border p-4">
 
                     <div class="text-center pt-3">
-                        <a href="{{app.request.schemeAndHttpHost}}">
-                            <img src="{{asset('assets/img/logo.png')}}" alt="{{appName()}}">
-                        </a>
+                        
+                        {% include 'component/logo.html.twig' %}
 
-                        <h3 class="my-1 text-center text-dark-50">Sign In</h3>
+                        <h3 class="my-1 text-center text-secondary">Sign In</h3>
 
-                        <p class="text-center text-dark-50 mb-3">
+                        <p class="text-center text-secondary mb-3">
                             For security reasons, we will send you a security code via e-mail which you can use it to
                             access your dashbaord.
                         </p>
@@ -35,13 +34,13 @@
                             <small class="text-secondary">Enter the email to receive your login code</small>
                         </div>
                         <div class="mb-3">
-                            <button class="btn btn-success w-100" style="height: 46px; border-radius: 0;">Sign
+                            <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">Sign
                                 In</button>
                         </div>
                     </form>
 
                     <div class="my-3 text-center">
-                        <p class="text-dark-50">
+                        <p class="text-secondary">
                             Need an account? <a href="{{path('app_register')}}"
                                 class="d-color text-decoration-none">Create one</a>
                         </p>
