--- a/templates/layout/footer.html.twig
+++ b/templates/layout/footer.html.twig
@@ -1,12 +1,12 @@
 <footer class="container-fluid bg-white small fixed-bottom md-text-center">
     <div class="row py-2">
         <div class="col-lg-6">
-            <div class="text-dark-50">
+            <div class="text-secondary">
                 <samll class="font-15">Copyright {{appName()}} © {{year()}}. All rights reserved.</small>
             </div>
         </div>
         <div class="col-lg-6">
-            <div class="text-dark-50 text-lg-end">
+            <div class="text-secondary text-lg-end">
                 <small class="font-15 pb-2">
                     powered by <a class="text-decoration-none" href="https://www.khalilleo.com" rel="follow index">
                         Khalilleo.com
