--- a/templates/profile/modal/update_username.html.twig
+++ b/templates/profile/modal/update_username.html.twig
@@ -10,10 +10,10 @@
             <form action="{{path('app_profile_personal_data_username_store')}}" method="post">
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="iUsername" class="form-label text-dark-50">New Username:</label>
+                        <label for="iUsername" class="form-label text-secondary">New Username:</label>
                         <input type="text" class="form-control" id="iUsername" placeholder="{{app.user.name}}"
                             name="iUsername" style="height: 42px; border-radius: 0;" required autofocus>
-                        <small class="text-secondary text-dark-50">This feld is required.</small>
+                        <small class="text-secondary text-secondary">This feld is required.</small>
                     </div>
                 </div>
                 <div class="modal-footer">
