forms rounded border

--- a/templates/account/auth.html.twig
+++ b/templates/account/auth.html.twig
@@ -8,13 +8,13 @@
     <div class="container p-0">
         <div class="row justify-content-center pt-5">
             <div class="col-lg-4 pt-5">
-                <div class="d-border p-4">
+                <div class="d-border p-4 rounded-3">
 
                     <div class="text-center pt-3">
                         
                         {% include 'component/logo.html.twig' %}
 
-                        <h3 class="my-1 text-center text-secondary">Sign In</h3>
+                        <h3 class="my-3 text-center text-secondary">Sign In</h3>
 
                         <p class="text-center text-secondary mb-3">
                             For security reasons, we will send you a security code via e-mail which you can use it to
