--- a/templates/account/register.html.twig
+++ b/templates/account/register.html.twig
@@ -10,11 +10,11 @@
             <div class="col-lg-4 pt-5">
                 <div class="d-border p-4">
 
-                    <div class="text-center pt-3">
+                    <div class="text-center pt-3 rounded-3">
 
                         {% include 'component/logo.html.twig' %}
 
-                        <h3 class="my-1 text-center text-secondary">Get Started</h3>
+                        <h3 class="my-3 text-center text-secondary">Get Started</h3>
                         <p class="text-center text-secondary mb-3">Sign up with work email</p>
                     </div>
 
