forms style border and fs

--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -10,13 +10,13 @@
             <div class="col-lg-4 pt-5">
                 <div class="d-border p-4">
 
-                    <div class="text-center pt-3 rounded-3">
+                    <div class="text-center pt-3">
 
                         {% include 'component/logo.html.twig' %}
 
-                        <h3 class="my-3 text-center text-secondary">Sign In</h3>
+                        <h4 class="my-3 text-center text-secondary">Sign In</h4>
 
-                        <p class="text-center text-secondary mb-3">
+                        <p class="text-center text-secondary mb-3 fs-15">
                             Enter your OTP to continue.
                         </p>
                     </div>
@@ -44,7 +44,7 @@
                     </form>
 
                     <div class="my-3 pt-3 text-center">
-                        <p class="text-secondary">No OTP yet? <a href="{{path('app_auth')}}"
+                        <p class="text-secondary fs-15">No OTP yet? <a href="{{path('app_auth')}}"
                                 class="d-color text-decoration-none">
                                 Request new one!</a>
                         </p>
