--- a/templates/admin/users/edit.html.twig
+++ b/templates/admin/users/edit.html.twig
@@ -69,11 +69,9 @@
                             </div>
                         </div>
 
-                        <div class="my-3">
-                            <button class="btn btn-success">Save Changes<span
-                                    class="fa fa-check-circle fa-sm pl-1"></span>
-                            </button>
-                        </div>
+                       
+                        {% include "admin/component/edit_save_btn.html.twig" %}
+                        
                     </form>
                 </div>
             </div>
