--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,8 +6,8 @@
     border-top: 0;
 }
 
-.alert {
-    border-radius: 0;
+.alert, input, .form-select, .form-control, .btn {
+    border-radius: 5px !important;
 }
 
 .form-label {
@@ -53,7 +53,7 @@ input[type="color"]:focus,
 .btn:focus .uneditable-input:focus {
     border-color: none;
     outline: 0 none;
-    border: 1px solid #6f65fc !important;
+    border: 1px solid #0d6dfd91 !important;
     box-shadow: none !important;
 }
 
@@ -66,8 +66,8 @@ input[type="color"]:focus,
 }
 
 .d-border {
-    border: 1px solid #b9b9b947;
-    border-radius: 5px;
+    border: 1px solid #b9b9b934;
+    border-radius: 7px;
 }
 
 .pointer {
