--- a/templates/account/auth.html.twig
+++ b/templates/account/auth.html.twig
@@ -8,15 +8,15 @@
     <div class="container p-0">
         <div class="row justify-content-center pt-5">
             <div class="col-lg-4 pt-5">
-                <div class="d-border p-4 rounded-3">
+                <div class="d-border p-4">
 
                     <div class="text-center pt-3">
                         
                         {% include 'component/logo.html.twig' %}
 
-                        <h3 class="my-3 text-center text-secondary">Sign In</h3>
+                        <h4 class="my-3 text-center text-secondary">Sign In</h4>
 
-                        <p class="text-center text-secondary mb-3">
+                        <p class="text-center text-secondary mb-3 fs-15">
                             For security reasons, we will send you a security code via e-mail which you can use it to
                             access your dashbaord.
                         </p>
@@ -40,7 +40,7 @@
                     </form>
 
                     <div class="my-3 text-center">
-                        <p class="text-secondary">
+                        <p class="text-secondary fs-15">
                             Need an account? <a href="{{path('app_register')}}"
                                 class="d-color text-decoration-none">Create one</a>
                         </p>
