--- a/templates/account/register.html.twig
+++ b/templates/account/register.html.twig
@@ -10,12 +10,12 @@
             <div class="col-lg-4 pt-5">
                 <div class="d-border p-4">
 
-                    <div class="text-center pt-3 rounded-3">
+                    <div class="text-center pt-3">
 
                         {% include 'component/logo.html.twig' %}
 
-                        <h3 class="my-3 text-center text-secondary">Get Started</h3>
-                        <p class="text-center text-secondary mb-3">Sign up with work email</p>
+                        <h4 class="my-3 text-center text-secondary">Get Started</h4>
+                        <p class="text-center text-secondary mb-3 fs-15">Sign up with work email</p>
                     </div>
 
                     {% include 'component/form_alert.html.twig' %}
@@ -51,7 +51,7 @@
                     </form>
 
                     <div class="my-3 text-center">
-                        <p class="text-secondary"> Already have an account?
+                        <p class="text-secondary fs-15"> Already have an account?
                             <a href="{{path('app_login')}}" class="d-color text-decoration-none">Login</a>
                         </p>
                     </div>
