--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -12,12 +12,12 @@
     <div class="container py-5">
         <div class="row justify-content-center text-center" style="padding-top: 40px;padding-bottom: 40px;">
             <div class="col-lg-7">
-                <h2 class="py-2 text-white">Duis autem vel eum</h2>
+                <h3 class="py-2 text-white">Duis autem vel eum</h3>
                 <h6 class=" text-white py-3">
                     Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
                     aliquip ex ea commodo consequat.
                 </h6>
-                <a href="{{path('app_register')}}" class="btn btn-lg btn-outline-light btn-lg fs-17 rounded-pill">Sign
+                <a href="{{path('app_register')}}" class="btn btn-lg btn-outline-light btn-lg fs-15 rounded-2">Sign
                     up for Free</a>
             </div>
         </div>
@@ -32,7 +32,7 @@
             <div class="card h-100 border-0 shadow-sm pb-2">
                 <div class="card-body">
                     <h5 class="card-title text-primary py-2">At vero eos et accusam</h5>
-                    <p class="card-text text-secondary">
+                    <p class="card-text text-secondary fs-15">
                         At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
                         takimata sanctus est Lorem ipsum dolor sit amet.
                     </p>
@@ -44,7 +44,7 @@
             <div class="card h-100 border-0 shadow-sm pb-2">
                 <div class="card-body">
                     <h5 class="card-title text-primary py-2">At vero eos et accusam</h5>
-                    <p class="card-text text-secondary">
+                    <p class="card-text text-secondary fs-15">
                         At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
                         takimata sanctus est Lorem ipsum dolor sit amet.
                     </p>
@@ -56,7 +56,7 @@
             <div class="card h-100 border-0 shadow-sm pb-2">
                 <div class="card-body">
                     <h5 class="card-title text-primary py-2">At vero eos et accusam</h5>
-                    <p class="card-text text-secondary">
+                    <p class="card-text text-secondary fs-15">
                         At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
                         takimata sanctus est Lorem ipsum dolor sit amet.
                     </p>
@@ -68,7 +68,7 @@
             <div class="card h-100 border-0 shadow-sm pb-2">
                 <div class="card-body">
                     <h5 class="card-title text-primary py-2">At vero eos et accusam</h5>
-                    <p class="card-text text-secondary">
+                    <p class="card-text text-secondary fs-15">
                         At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
                         takimata sanctus est Lorem ipsum dolor sit amet.
                     </p>
@@ -80,7 +80,7 @@
             <div class="card h-100 border-0 shadow-sm pb-2">
                 <div class="card-body">
                     <h5 class="card-title text-primary py-2">At vero eos et accusam</h5>
-                    <p class="card-text text-secondary">
+                    <p class="card-text text-secondary fs-15">
                         At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
                         takimata sanctus est Lorem ipsum dolor sit amet.
                     </p>
@@ -92,7 +92,7 @@
             <div class="card h-100 border-0 shadow-sm pb-2">
                 <div class="card-body">
                     <h5 class="card-title text-primary py-2">At vero eos et accusam</h5>
-                    <p class="card-text text-secondary">
+                    <p class="card-text text-secondary fs-15">
                         At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
                         takimata sanctus est Lorem ipsum dolor sit amet.
                     </p>
@@ -110,7 +110,7 @@
 
                 <div class="col-md-12">
                     <h4>Do you have any questions?</h4>
-                    <p>Contact us personally or send us an e-mail, we will be happy to help you!</p>
+                    <p class=" fs-15">Contact us personally or send us an e-mail, we will be happy to help you!</p>
                 </div>
             </div>
         </div>
