--- a/templates/profile/modal/update_email.html.twig
+++ b/templates/profile/modal/update_email.html.twig
@@ -12,12 +12,12 @@
                     <div class="mb-3">
                         <label for="iEmail" class="form-label text-secondary">New Email:</label>
                         <input type="text" class="form-control" id="iEmail" placeholder="{{app.user.email}}"
-                            name="iEmail" style="height: 42px; border-radius: 0;" required>
+                            name="iEmail" style="height: 42px; border-radius: 0;" required autofocus>
                         <small class="text-secondary text-secondary">This feld is required.</small>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
                     <button type="submit" class="btn btn-primary">Update E-mail</button>
                 </div>
             </form>
