--- a/templates/profile/modal/update_username.html.twig
+++ b/templates/profile/modal/update_username.html.twig
@@ -17,7 +17,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
                     <button type="submit" class="btn btn-primary">Update Username</button>
                 </div>
             </form>
