--- a/templates/static/contact-us.html.twig
+++ b/templates/static/contact-us.html.twig
@@ -29,7 +29,7 @@
                 <div class="row row-cols-1 row-cols-md-1 g-3">
                     <div class="col mt-4">
                         <div class="card text-center d-border">
-                            <div class="card-body py-5">
+                            <div class="card-body py-4">
                                 <h5 class="card-title text-secondary pb-2">Phone</h5>
                                 <p class="card-text text-secondary">
                                     <span class="bi bi-phone me-2 d-color"></span> 0163 / 616 - 5396
@@ -39,7 +39,7 @@
                     </div>
                     <div class="col">
                         <div class="card text-center d-border">
-                            <div class="card-body py-5">
+                            <div class="card-body py-4">
                                 <h5 class="card-title text-secondary pb-2">Email</h5>
                                 <p class="card-text text-secondary">
                                     <span class="bi bi-envelope me-2 d-color"></span> ronijan[@]posteo.de
@@ -49,7 +49,7 @@
                     </div>
                     <div class="col">
                         <div class="card text-center d-border">
-                            <div class="card-body py-5">
+                            <div class="card-body py-4">
                                 <h5 class="card-title text-secondary pb-2">Address</h5>
                                 <p class="card-text text-secondary">
                                     <span class="bi bi-pin-map-fill me-2 d-color"></span>Paul-Gerhardt-Str. 7, 74321
@@ -63,29 +63,25 @@
             </div>
             <div class="col-lg-6">
                 <form action="{{path('app_contact_us_new')}}" method="post" class="px-2">
-                    <div class="mb-3">
-                        <label for="iName" class="form-label text-secondary">Name</label>
+                    <div class="mb-3 mt-1">
                         <input type="text" class="form-control" id="iName" placeholder="Name *"
                             style="height: 46px; border-radius: 0;"
                             required name="iName" style="height: 46px; border-radius: 0;">
                     </div>
 
                     <div class="mb-3">
-                        <label for="iEmail" class="form-label text-secondary">Email</label>
                         <input type="email" class="form-control" id="iEmail" placeholder="Email *"
                             style="height: 46px; border-radius: 0;"
                             required name="iEmail" style="height: 46px; border-radius: 0;">
                     </div>
 
                     <div class="mb-3">
-                        <label for="iSubject" class="form-label text-secondary">Subject</label>
                         <input type="text" class="form-control" id="iSubject" placeholder="Subject *"
                             style="height: 46px; border-radius: 0;"
                             required name="iSubject" style="height: 46px; border-radius: 0;">
                     </div>
 
                     <div class="mb-4">
-                        <label for="iMessage" class="form-label text-secondary">Message</label>
                         <textarea class="form-control" id="iMessage" rows="5" name="iMessage"
                             style="border-radius: 0;"
                             placeholder="Message *"></textarea>
