--- a/templates/admin/layout/base.html.twig
+++ b/templates/admin/layout/base.html.twig
@@ -38,7 +38,7 @@
         <meta http-equiv="refresh" content="3;url=/{{path('app_noscript')}}">
     </noscript>
 </head>
-<body>
+<body class="bg-light">
 
     <div class="hold-transition sidebar-mini layout-fixed">
         <div class="wrapper">
