--- a/templates/account/auth.html.twig
+++ b/templates/account/auth.html.twig
@@ -18,7 +18,7 @@
 
                         <p class="text-center text-secondary mb-3 fs-15">
                             For security reasons, we will send you a security code via e-mail which you can use it to
-                            access your dashbaord.
+                            access your dashboard.
                         </p>
                     </div>
 
@@ -34,8 +34,9 @@
                             <small class="text-secondary">Enter the email to receive your login code</small>
                         </div>
                         <div class="mb-3">
-                            <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">Sign
-                                In</button>
+                            <button class="btn btn-primary w-100" style="height: 46px; border-radius: 0;">
+                                Sign In
+                            </button>
                         </div>
                     </form>
 
