rename folder to dashboard & code improvements

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin/layout/base.html.twig' %}
+{% extends 'dashboard/layout/base.html.twig' %}
 
 {% block title %} Dashboard {% endblock %}
 
