--- a/templates/dashboard/layout/navbar.html.twig
+++ b/templates/dashboard/layout/navbar.html.twig
@@ -7,7 +7,7 @@
             <a href="{{path('app_home')}}" class="nav-link">Home</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="{{path('app_profile')}}" class="nav-link">Profile</a>
+            <a href="{{path('app_profile_index')}}" class="nav-link">Profile</a>
         </li>
     </ul>
 
