--- a/templates/dashboard/users/partial/table_content.html.twig
+++ b/templates/dashboard/users/partial/table_content.html.twig
@@ -28,7 +28,7 @@
                 <td title="{{ row.createdAt|date }}">{{ timeAgo(row.createdAt) }}</td>
 
                 <td>
-                    <a href="{{path('app_admin_user_edit', {id:row.id})}}">
+                    <a href="{{path('app_dashboard_user_edit', {id:row.id})}}">
                         <span class="fa fa-edit fa-sm"></span>
                     </a>
                 </td>
