--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -13,11 +13,11 @@
               <span class="bi bi-house pe-1"></span> Home</a>
           </li>
           {% if is_granted('ROLE_SUPER_ADMIN') %}
-          <a href="{{path('app_admin_index')}}" class="dropdown-item">
+          <a href="{{path('app_dashboard_index')}}" class="dropdown-item">
             <span class="bi bi-speedometer2 pe-1"></span> Dashboard
           </a>
           {% endif %}
-          <li><a href="{{path('app_profile')}}" class="dropdown-item" type="button">
+          <li><a href="{{path('app_profile_index')}}" class="dropdown-item" type="button">
               <span class="bi bi-person pe-1"></span> Profile</a>
           </li>
           <li><a href="{{path('app_logout')}}" class="dropdown-item" type="button">
