--- a/templates/static/privacy-policy.html.twig
+++ b/templates/static/privacy-policy.html.twig
@@ -160,7 +160,7 @@
                 <p class="text-secondary">{{street}}</p>
                 <p class="text-secondary">{{city}}</p>
                 <p class="text-secondary">{{country}}</p>
-                <p class="text-secondary">Tel.: {{phonenumber}}</p>
+                <p class="text-secondary">Tel.: {{phoneNumber}}</p>
                 <p class="text-secondary">E-Mail: {{email}}</p>
                 <p class="text-secondary">Website: {{app.request.schemeAndHttpHost}}</p>
 
