--- a/templates/dashboard/component/edit_save_btn.html.twig
+++ b/templates/dashboard/component/edit_save_btn.html.twig
@@ -1,5 +1,5 @@
 <div class="my-3">
-    <button class="btn btn-success">
+    <button class="btn btn-primary">
         <span class="fa fa-check fa-sm pl-1"></span> Save Changes
     </button>
 </div>
