--- a/templates/dashboard/layout/sidebar.html.twig
+++ b/templates/dashboard/layout/sidebar.html.twig
@@ -7,7 +7,7 @@
                 <img src="{{asset('lte/img/avatar-160x160.png')}}" class="img-circle" alt="User Image">
             </div>
             <div class="info">
-                <a href="{{path('app_profile')}}" class="d-block">{{app.user.name|capitalize}}</a>
+                <a href="{{path('app_profile_index')}}" class="d-block">{{app.user.name|capitalize}}</a>
             </div>
         </div>
 
@@ -15,7 +15,7 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
                 <li class="nav-item has-treeview menu-open bg-warning">
-                    <a href="{{path('app_admin_index')}}" class="nav-link">
+                    <a href="{{path('app_dashboard_index')}}" class="nav-link">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>
                             Dashboard
@@ -26,7 +26,7 @@
                 <li class="nav-header">CONTENTS</li>
 
                 <li class="nav-item">
-                    <a href="{{path('app_admin_users_index')}}" class="nav-link">
+                    <a href="{{path('app_dashboard_users_index')}}" class="nav-link">
                         <i class="fas fa-users nav-icon"></i>
                         <p>Users</p>
                     </a>
