--- a/templates/dashboard/users/index.html.twig
+++ b/templates/dashboard/users/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin/layout/base.html.twig' %}
+{% extends 'dashboard/layout/base.html.twig' %}
 
 {% block title %} Dashboard Users {% endblock %}
 
@@ -30,7 +30,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    {% include 'admin/users/partial/table_content.html.twig' %}
+                    {% include 'dashboard/users/partial/table_content.html.twig' %}
                 </div>
             </div>
 
