--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -13,26 +13,26 @@
         <div class="row">
             <div class="col-lg-12">
 
-                <h5 class="text-secondary mt-lg-5 mt-md-3">My Profile</h5>
+                <h5 class="text-secondary mt-lg-5 mt-4">My Profile</h5>
 
-                <div class="bg-white rounded-3">
+                <div class="bg-white rounded-3 d-border">
 
-                    <div class="row p-3 py-lg-4">
-                        <div class="col">
-                            <img src="{{asset('assets/img/avatar-160x160.png')}}" height="180px" alt="Avatar" style="border-radius: 15px;">
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+                        <a href="{{path('app_dashboard_index')}}" class="float-end small p-2">
+                            <small>Dashboard</small>
+                        </a>
+                    {% endif %}
+
+                    <div class="d-flex p-3 py-lg-4">
+                        <div class="">
+                            <img src="{{asset('assets/img/avatar-160x160.png')}}" height="120px" alt="Avatar" style="border-radius: 15px;">
                         </div>
-                        <div class="col-10">
-                            <p class="float-end small md-d-none">
-                                {% if is_granted('ROLE_SUPER_ADMIN') %}
-                                <a href="{{path('app_dashboard_index')}}" class="text-decoration-none">Dashboard</a>
-                                {% endif %}
-                            </p>
-                            <p class="text-secondary pt-3">Username: {{app.user.name}}</p>
-                            <p class="text-secondary">Email: {{app.user.email}}</p>
-                            <p class="text-secondary">Created: {{app.user.createdAt|date('d.m.Y')}}</p>
+                        <div class="ms-2 ms-lg-3">
+                            <small class="text-secondary pt-2"><span class="md-d-none">Username: </span>{{app.user.name}}</small><br>
+                            <small class="text-secondary"><span class="md-d-none">Email: </span>{{app.user.email}}</small><br>
+                            <small class="text-secondary"><span class="md-d-none">Created: </span>{{app.user.createdAt|date('d.m.Y')}}</small><br>
                         </div>
                     </div>
-
                 </div>
 
                 <h5 class="text-secondary mt-5">Setting</h5>
@@ -40,37 +40,52 @@
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
                     <div class="col">
                         <div class="card h-100 d-border">
-                            <div class="card-body">
-                                <h6 class="card-title text-secondary mb-0 py-2" data-bs-toggle="modal" data-bs-target="#usernameModal">
-                                    Change Username <span class="float-end text-secondary pointer bi bi-pencil-square"></span>
+                            <div class="card-body" data-bs-toggle="modal" data-bs-target="#usernameModal">
+                                <h6 class="card-title text-secondary mb-0 py-2">
+                                    Username
                                 </h6>
+                                <small class="text-secondary">Update your username.
+                                    <span class="float-end text-secondary pointer bi bi-pencil-square"></span>
+                                </small>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card h-100 d-border">
-                            <div class="card-body">
-                                <h6 class="card-title text-secondary mb-0 py-2" data-bs-toggle="modal" data-bs-target="#emailModal">
-                                    Change Email <span class="float-end text-secondary pointer bi bi-pencil-square"></span>
+                            <div class="card-body" data-bs-toggle="modal" data-bs-target="#emailModal">
+                                <h6 class="card-title text-secondary mb-0 py-2">
+                                    E-mail address
                                 </h6>
+                                <small class="text-secondary">
+                                    Update your email address.
+                                    <span class="float-end text-secondary pointer bi bi-pencil-square"></span>
+                                </small>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card h-100 d-border">
-                            <div class="card-body">
-                                <h6 class="card-title text-secondary mb-0 py-2"  data-bs-toggle="modal" data-bs-target="#exportModal">
-                                    Download Personal Data <span class="float-end text-secondary pointer bi bi-download"></span>
+                            <div class="card-body" data-bs-toggle="modal" data-bs-target="#exportModal">
+                                <h6 class="card-title text-secondary mb-0 py-2">
+                                    Personal Data
                                 </h6>
+                                <small class="text-secondary">
+                                    Download your data as JSON.
+                                    <span class="float-end text-secondary pointer bi bi-download"></span>
+                                </small>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card h-100 d-border">
-                            <div class="card-body">
-                                <h6 class="card-title text-secondary mb-0 py-2" data-bs-toggle="modal" data-bs-target="#deleteModal">
-                                    Delete Account <span class="float-end text-secondary pointer bi bi-trash"></span>
+                            <div class="card-body" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                                <h6 class="card-title text-secondary mb-0 py-2">
+                                    Delete Account
                                 </h6>
+                                <small class="text-secondary">
+                                    Request account deletion.
+                                    <span class="float-end text-secondary pointer bi bi-trash"></span>
+                                </small>
                             </div>
                         </div>
                     </div>
