--- a/templates/static/contact-us.html.twig
+++ b/templates/static/contact-us.html.twig
@@ -82,7 +82,18 @@
                     </div>
 
                     <div class="mb-4">
-                        <textarea class="form-control" id="iMessage" rows="5" name="iMessage"
+                        <textarea
+                                spellcheck="false"
+                                ondragstart="return false"
+                                ondrop="return false"
+                                dir="auto"
+                                autocapitalize="off"
+                                autocomplete="off"
+                                translate="no"
+                                class="form-control"
+                                id="iMessage"
+                                rows="5"
+                                name="iMessage"
                             style="border-radius: 0;"
                             placeholder="Message *"></textarea>
                     </div>
