--- a/templates/static/report-abuse.html.twig
+++ b/templates/static/report-abuse.html.twig
@@ -46,7 +46,18 @@
 
                     <div class="mb-4">
                         <label for="iMessage" class="form-label text-white-50">Message</label>
-                        <textarea class="form-control" id="iMessage" rows="5" name="iMessage"
+                        <textarea
+                                spellcheck="false"
+                                ondragstart="return false"
+                                ondrop="return false"
+                                dir="auto"
+                                autocapitalize="off"
+                                autocomplete="off"
+                                translate="no"
+                                class="form-control"
+                                id="iMessage"
+                                rows="5"
+                                name="iMessage"
                             style="border-radius: 0;"
                             placeholder="Type your message (optional)"></textarea>
                     </div>
