change text to Authenticate

--- a/templates/account/auth.html.twig
+++ b/templates/account/auth.html.twig
@@ -14,7 +14,7 @@
                         
                         {% include 'component/logo.html.twig' %}
 
-                        <h4 class="my-3 text-center text-secondary">Sign In</h4>
+                        <h4 class="my-3 text-center text-secondary">Authenticate</h4>
 
                         <p class="text-center text-secondary mb-3 fs-15">
                             For security reasons, we will send you a security code via e-mail which you can use it to
