--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -25,7 +25,7 @@
                         </a>
                     {% endif %}
 
-                    <div class="d-flex p-3 py-lg-4">
+                    <div class="d-flex p-3 p-lg-4">
                         <div class="">
                             <img src="{{asset('assets/img/avatar-160x160.png')}}" height="120px" alt="Avatar" style="border-radius: 15px;">
                         </div>
