navbar login link

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -17,8 +17,9 @@
                     Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
                     aliquip ex ea commodo consequat.
                 </h6>
-                <a href="{{path('app_register')}}" class="btn btn-lg btn-outline-light btn-lg fs-15 rounded-2">Sign
-                    up for Free</a>
+                <a href="{{path('app_register')}}" class="btn-action">
+                    Sign up for Free
+                </a>
             </div>
         </div>
     </div>
