--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -79,6 +79,19 @@ input[type="color"]:focus,
     cursor: pointer;
 }
 
+.btn-action {
+    border: 3px solid #e6e4e4;
+    padding: 14px 20px;
+    background: #fff;
+    border-radius: 10px;
+    text-decoration: none;
+    color: #454545;
+}
+
+.btn-action:hover {
+    border: 3px solid #b6b6b6;
+}
+
 @media (max-width: 868px) {
     .md-text-center {
         text-align: center !important;
