--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -26,7 +26,7 @@
         </ul>
       </div>
       {% else %}
-      <a href="{{path('app_auth')}}" class="btn btn-outline-primary btn-sm">
+      <a href="{{path('app_auth')}}" class="text-secondary text-decoration-none pe-1">
         Login <span class="bi bi-person"></span>
       </a>
       {% endif %}
