--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -13,7 +13,7 @@
         <div class="row justify-content-center text-center" style="padding-top: 40px;padding-bottom: 40px;">
             <div class="col-lg-7">
                 <h3 class="py-2 text-white">Duis autem vel eum</h3>
-                <h6 class=" text-white py-3">
+                <h6 class=" text-white py-3 mb-4">
                     Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
                     aliquip ex ea commodo consequat.
                 </h6>
