--- a/templates/dashboard/users/index.html.twig
+++ b/templates/dashboard/users/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'dashboard/layout/base.html.twig' %}
 
-{% block title %} Dashboard Users {% endblock %}
+{% block title %} Dashboard Users overview {% endblock %}
 
 {% block body %}
 
@@ -10,7 +10,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    <h5 class="m-0 text-dark mt-1">Users</h5>
+                    <h5 class="m-0 text-dark mt-1">Users overview</h5>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
