--- a/templates/dashboard/users/partial/table_content.html.twig
+++ b/templates/dashboard/users/partial/table_content.html.twig
@@ -1,4 +1,4 @@
-<div class="card-body table-responsive bg-white p-0 mb-3">
+<div class="card-body table-responsive bg-white p-0 mb-3 area-section">
     <table class="table table-hover text-nowrap">
         <thead>
             <tr class="fs-14">
