--- a/templates/dashboard/users/edit.html.twig
+++ b/templates/dashboard/users/edit.html.twig
@@ -54,7 +54,7 @@
                                 <input type="checkbox" class="form-check-input" id="4lN3jG3gE9oB3o" name="isVerified"
                                     {{user.isVerified ? 'checked' : '' }}>
                                 <label class="form-check-label text-secondary" for="4lN3jG3gE9oB3o">
-                                    is Account being verified
+                                    Account being verified
                                 </label>
                             </div>
                         </div>
@@ -64,7 +64,7 @@
                                 <input type="checkbox" class="form-check-input" id="7lN3jG3gE9oB3Do" name="isDeleted"
                                     {{user.isDeleted ? 'checked' : '' }}>
                                 <label class="form-check-label text-secondary" for="7lN3jG3gE9oB3Do">
-                                    is Account being deleted
+                                    Account being deleted
                                 </label>
                             </div>
                         </div>
