contact-us remove style

--- a/templates/static/contact-us.html.twig
+++ b/templates/static/contact-us.html.twig
@@ -66,19 +66,19 @@
                     <div class="mb-3 mt-1">
                         <input type="text" class="form-control" id="iName" placeholder="Name *"
                             style="height: 46px; border-radius: 0;"
-                            required name="iName" style="height: 46px; border-radius: 0;">
+                            required name="iName">
                     </div>
 
                     <div class="mb-3">
                         <input type="email" class="form-control" id="iEmail" placeholder="Email *"
                             style="height: 46px; border-radius: 0;"
-                            required name="iEmail" style="height: 46px; border-radius: 0;">
+                            required name="iEmail">
                     </div>
 
                     <div class="mb-3">
                         <input type="text" class="form-control" id="iSubject" placeholder="Subject *"
                             style="height: 46px; border-radius: 0;"
-                            required name="iSubject" style="height: 46px; border-radius: 0;">
+                            required name="iSubject">
                     </div>
 
                     <div class="mb-4">
